pkg/ibmvpc/examples/out/explain_out/tgwDisabledDenyPrefix_all_vpcs_explain.txt
Explaining connectivity from ky-vsi1-subnet20 to ky-vsi0-subnet0
Interpreted Src: test-vpc2-ky/ky-vsi1-subnet20[10.240.128.5]
Interpreted Dst: test-vpc0-ky/ky-vsi0-subnet0[10.240.0.5]
================================================================

No connections from test-vpc2-ky/ky-vsi1-subnet20[10.240.128.5] to test-vpc0-ky/ky-vsi0-subnet0[10.240.0.5];
All connections will be blocked since transit gateway denies route from source to destination

Egress: security group sg21-ky allows connection; network ACL acl21-ky allows connection
cross-vpc-connection: transit-connection tg_connection0 of transit-gateway local-tg-ky denies connection
Ingress: network ACL acl1-ky allows connection; security group sg1-ky allows connection

Path:
	ky-vsi1-subnet20[10.240.128.5] -> security group sg21-ky -> subnet20 -> network ACL acl21-ky -> 
	test-vpc2-ky -> | TGW local-tg-ky |

------------------------------------------------------------------------------------------------------------------------
